[package]
name = "bktree"
version = "2.0.1"
authors = ["IGI-111 <igi-111@protonmail.com>"]
edition = "2018"
description = "BK-tree datastructure"
repository = "https://github.com/IGI-111/bktree"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
bincode = "1.3"

[features]
serde-support = ["serde"]
